--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "resume",
+  "name": "Mohammad Miladi",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,7 +9,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
+    "prettier": "^2.5.1",
     "vue": "^2.6.11"
   },
   "devDependencies": {
