--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
     "prettier": "^2.5.1",
+    "sass-loader": "^12.4.0",
     "vue": "^2.6.11"
   },
   "devDependencies": {
