--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.4.0",
     "bootstrap": "^5.1.3",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
+    "emailjs": "^3.7.0",
     "prettier": "^2.5.1",
     "sass-loader": "^12.4.0",
     "vue": "^2.6.11"
